fixed footer and added spacing after homepage buttons

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,9 +69,12 @@ h1, h2, h3, h4, h5, p {
     height: 800px;
 }
 
+.spacing {
+    margin-top: 100px;
+}
+
 .footer {
-    border-radius: 50px 50px 5px 5px;
-    margin-top: 60px;
+    border-radius: 25px 25px 5px 5px;
     background-color: #222;
 }
 
